# codex-oss-maintainer-kit

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: application-copy-draft.md  codex-for-oss-application-playbook.md  public-launch-checklist.md  self-maintainer-packet.md  self-profile.json
docs/examples/: demo-maintainer-packet.md  demo-profile.json
src/codex_oss_maintainer_kit/: __init__.py  cli.py  demo.py  git_inspector.py  github_inspector.py  models.py  render.py  serialize.py
tests/: test_cli.py  test_git_inspector.py  test_github_inspector.py  test_render.py  test_serialize.py
