[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "codex-oss-maintainer-kit"
version = "0.2.1"
description = "Generate maintainer evidence packets and Codex workflow plans for open-source projects."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "PenguLab" }
]
keywords = ["open-source", "maintainer", "codex", "github", "release-workflows"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: Software Development :: Version Control :: Git",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.urls]
Homepage = "https://github.com/Pengu-ai/codex-oss-maintainer-kit"
Issues = "https://github.com/Pengu-ai/codex-oss-maintainer-kit/issues"

[project.scripts]
codex-oss-kit = "codex_oss_maintainer_kit.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/codex_oss_maintainer_kit"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
